(since puppies is already taken on PyPI), and updated email.

*****

Retracted puppies version to 0.2.0a1 (to align with PyPI release).

*****

Updated pyproject.toml file to consider python>3.7 versions.


*****  Do 24. Feb 14:05:15 CET 2022  *****

Updated requirements.

*****

Updated pyproject.toml to use oldest-supported-numpy dependency.

*****

Added .travis.yml file.

*****

Added .gitignore in puppies/lib/
Removed Makefile.

*****

Updated version.py file and setup.py.

*****

Fixed bug with version.py filename.

*****

Renamed gauss.c to _gauss.c

*****

Prevented deprecation warning with
scipy.ndimage.interpolation.map_coordinates

*****

Corrected includes in C source files.

*****

Debugging edits to figure out problem with C code.

*****

Bringing (renamed) _asymmetry.c back.

*****

Bringing _expramp.c back.

*****

Bringing _linramp.c back.

*****

Bringing _eclipse.c back.

*****

Bringing _mandeltr.c back.
This one shoulf break because there no preceeding underscore
in PyModuleDef of the file.

*****

Bringing _bilinint.c back.
Previous commit did not break...

*****

Bringing _disk.c back.

*****

Bringing _aphot.c back.

*****

Bringing _gauss.c back. The final one, will it break...

*****

Attempt number one at approaching a passing gauss test.
Replaced gauss2D code with exponential ramp.
Work in progress.

*****

One step closed, get names of functions as they should be.

*****

Getting closer.

*****

OK, it's either the name of PyMethodDef gauss_methods
or something inside the gauss2D function.

*****

It seems that the problem is the content of the function.
Reverting edits.

*****

Not breaking once again.
Try changing stuff in the PyArg_ParseTuple().

*****

So far so good. Updated the rest of the PyArg_ParseTuple variables.

*****

Broken again. Reverted PyArg_ParseTuple edits.
Updated for loops.

*****

Updated everything except the PyArg_ParseTuple.

*****

Removed height calculation.
